--- a/tidy/app/src/main/res/layout/fragment_overview.xml
+++ b/tidy/app/src/main/res/layout/fragment_overview.xml
@@ -34,9 +34,11 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_items"
-            android:layout_width="wrap_content"
-            android:layout_height="100dp"
-            android:layout_marginTop="36dp"
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/overviewDescription" />
