--- a/tidy/app/src/main/res/layout/room_recycle.xml
+++ b/tidy/app/src/main/res/layout/room_recycle.xml
@@ -16,12 +16,13 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-<!--        <ImageView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="0px"-->
-<!--            android:layout_weight="3"-->
-<!--            android:adjustViewBounds="true"-->
-<!--            app:srcCompat="@drawable/living_room" />-->
+        <ImageView
+            android:id="@+id/room_photo"
+            android:layout_width="match_parent"
+            android:layout_height="0px"
+            android:layout_weight="3"
+            android:adjustViewBounds="true"
+            app:srcCompat="@drawable/living_room" />
 
         <TextView
             android:id="@+id/room_name"
