--- a/tidy/app/src/main/res/navigation/navigation.xml
+++ b/tidy/app/src/main/res/navigation/navigation.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation.xml"
-    app:startDestination="@id/overviewFragment2">
+    app:startDestination="@id/addRooms">
 
     <fragment
         android:id="@+id/overviewFragment2"
         android:name="com.epfl.esl.tidy.OverviewFragment"
         android:label="OverviewFragment" />
+    <fragment
+        android:id="@+id/addRooms"
+        android:name="com.epfl.esl.tidy.AddRooms"
+        android:label="add_rooms_fragment"
+        tools:layout="@layout/add_rooms_fragment" />
 </navigation>
