--- a/tidy/app/src/main/res/layout/fragment_overview.xml
+++ b/tidy/app/src/main/res/layout/fragment_overview.xml
@@ -2,10 +2,12 @@
 <layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        android:layout_height="match_parent">
+<!--        tools:context=".MainActivity"-->
+        >
 
         <TextView
             android:id="@+id/overviewTitle"
@@ -31,6 +33,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/overviewTitle" />
 
+        <ProgressBar
+            android:id="@+id/progress_circular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/recycler_view_items"
+            app:layout_constraintBottom_toBottomOf="@+id/recycler_view_items"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_items"
