--- a/tidy/app/src/main/res/layout/activity_main.xml
+++ b/tidy/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
         tools:context=".MainActivity">
 
         <fragment
-            android:id="@+id/overviewFragment"
+            android:id="@+id/mainFragment"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
