--- a/tidy/app/src/main/res/layout/room_recycle.xml
+++ b/tidy/app/src/main/res/layout/room_recycle.xml
@@ -22,7 +22,7 @@
             android:layout_height="0px"
             android:layout_weight="3"
             android:adjustViewBounds="true"
-            app:srcCompat="@drawable/living_room" />
+            app:srcCompat="@drawable/pick_image" />
 
         <TextView
             android:id="@+id/room_name"
