--- a/tidy/app/src/main/res/navigation/navigation.xml
+++ b/tidy/app/src/main/res/navigation/navigation.xml
@@ -3,15 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation.xml"
-    app:startDestination="@id/addRooms">
-
-    <fragment
-        android:id="@+id/overviewFragment2"
-        android:name="com.epfl.esl.tidy.OverviewFragment"
-        android:label="OverviewFragment" />
+    app:startDestination="@id/OverviewFragment">
     <fragment
         android:id="@+id/addRooms"
         android:name="com.epfl.esl.tidy.AddRooms"
-        android:label="add_rooms_fragment"
-        tools:layout="@layout/add_rooms_fragment" />
+        android:label="AddRooms" />
+    <fragment
+        android:id="@+id/OverviewFragment"
+        android:name="com.epfl.esl.tidy.OverviewFragment"
+        android:label="OverviewFragment" />
 </navigation>
