[major] added editting and admin capabilities

--- a/tidy/app/src/main/res/navigation/navigation.xml
+++ b/tidy/app/src/main/res/navigation/navigation.xml
@@ -45,7 +45,11 @@
         android:id="@+id/settings"
         android:name="com.epfl.esl.tidy.Settings"
         android:label="fragment_settings"
-        tools:layout="@layout/fragment_settings" />
+        tools:layout="@layout/fragment_settings" >
+        <action
+            android:id="@+id/action_settings_to_profileLogin"
+            app:destination="@id/profileLogin" />
+    </fragment>
     <fragment
         android:id="@+id/augmentedReality"
         android:name="com.epfl.esl.tidy.AugmentedReality"
