--- a/tidy/app/src/main/res/layout/fragment_settings.xml
+++ b/tidy/app/src/main/res/layout/fragment_settings.xml
@@ -6,14 +6,87 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <TextView
+            android:id="@+id/space_id_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/Space_ID"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/view2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.271"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/password"
+            app:layout_constraintVertical_bias="1.0" />
+
+        <View
+            android:id="@+id/view2"
+            android:layout_width="400dp"
+            android:layout_height="1dp"
+            android:layout_marginEnd="204dp"
+            android:background="@color/black"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/email_label"
+            app:layout_constraintVertical_bias="0.356" />
+
+        <TextView
+            android:id="@+id/password_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/Password"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/view"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.275"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/email_input"
+            app:layout_constraintVertical_bias="1.0" />
+
+
+        <TextView
+            android:id="@+id/password"
+            android:layout_width="400dp"
+            android:layout_height="45dp"
+            android:layout_marginTop="4dp"
+            android:text="@string/Password"
+            android:textSize="34sp"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.482"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view" />
+
+        <EditText
+            android:id="@+id/password_input"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="28dp"
+            android:hint="@string/Password"
+            android:textSize="34sp"
+            android:visibility="invisible"
+            app:layout_constraintStart_toStartOf="@+id/password_label"
+            app:layout_constraintTop_toTopOf="@+id/password_label" />
+
+        <View
+            android:id="@+id/view"
+            android:layout_width="400dp"
+            android:layout_height="1dp"
+            android:layout_marginEnd="200dp"
+            android:background="@color/black"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/email_label"
+            app:layout_constraintVertical_bias="0.17" />
+
         <ImageView
             android:id="@+id/profile_pic"
             android:layout_width="239dp"
             android:layout_height="190dp"
-            android:layout_marginTop="336dp"
+            android:layout_marginTop="284dp"
             android:src="@drawable/broom"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.126"
+            app:layout_constraintHorizontal_bias="0.122"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -45,77 +118,248 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.077" />
 
+
         <TextView
             android:id="@+id/first_name"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="300dp"
-            android:layout_marginTop="84dp"
+            android:layout_marginTop="72dp"
             android:layout_marginEnd="75dp"
             android:text="@string/First_Name"
             android:textSize="24sp"
+            android:visibility="visible"
             app:layout_constraintEnd_toStartOf="@+id/last_name"
-            app:layout_constraintHorizontal_bias="0.995"
-            app:layout_constraintStart_toEndOf="@+id/profile_pic"
-            app:layout_constraintStart_toStartOf="@+id/profile_pic"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/first_name_label"
             app:layout_constraintTop_toTopOf="@+id/profile_pic" />
+
+        <EditText
+            android:id="@+id/first_name_input"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="28dp"
+            android:layout_marginEnd="75dp"
+            android:hint="@string/First_Name"
+            android:textSize="24sp"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toStartOf="@+id/last_name"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/first_name_label"
+            app:layout_constraintTop_toTopOf="@+id/first_name_label" />
 
         <TextView
             android:id="@+id/email"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="120dp"
+            android:layout_width="400dp"
+            android:layout_height="45dp"
             android:text="@string/Email"
             android:textSize="34sp"
+            android:visibility="visible"
             app:layout_constraintBottom_toTopOf="@+id/password"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.49"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/email_label"
+            app:layout_constraintVertical_bias="0.012" />
+
+        <EditText
+            android:id="@+id/email_input"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="@string/Email"
+            android:textSize="34sp"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toTopOf="@+id/password"
+            app:layout_constraintStart_toStartOf="@+id/email_label"
+            app:layout_constraintTop_toBottomOf="@+id/email_label"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <TextView
+            android:id="@+id/space_id"
+            android:layout_width="400dp"
+            android:layout_height="45dp"
+            android:text="@string/Space_ID"
+            android:textSize="34sp"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.482"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/space_id_label" />
+
+        <EditText
+            android:id="@+id/space_id_input"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="28dp"
+            android:hint="@string/Space_ID"
+            android:textSize="34sp"
+            android:visibility="invisible"
+            app:layout_constraintStart_toStartOf="@+id/space_id_label"
+            app:layout_constraintTop_toTopOf="@+id/space_id_label" />
+
+        <Button
+            android:id="@+id/sign_out"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="36dp"
+            android:text="@string/Sign_Out"
+            android:textSize="34sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/space_id_input" />
+
+        <Button
+            android:id="@+id/admin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/Administrator"
+            android:textSize="34sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/sign_out" />
+
+        <TextView
+            android:id="@+id/last_name"
+            android:layout_width="150dp"
+            android:layout_height="35dp"
+            android:layout_marginEnd="56dp"
+            android:text="@string/Last_Name"
+            android:textSize="24sp"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/first_name" />
+
+        <EditText
+            android:id="@+id/last_name_input"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="@string/Last_Name"
+            android:textSize="24sp"
+            android:visibility="invisible"
+            app:layout_constraintStart_toStartOf="@+id/last_name_label"
+            app:layout_constraintTop_toTopOf="@+id/first_name_input" />
+
+        <ImageButton
+            android:id="@+id/edit_button"
+            android:layout_width="85dp"
+            android:layout_height="75dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:background="#00000000"
+            android:scaleType="fitCenter"
+            android:scrollbarSize="1dp"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/pencil" />
+
+        <ImageButton
+            android:id="@+id/save_button"
+            android:layout_width="95dp"
+            android:layout_height="85dp"
+            android:layout_marginTop="-8dp"
+            android:layout_marginEnd="8dp"
+            android:background="#00000000"
+            android:scaleType="fitCenter"
+            android:visibility="visible"
+            app:layout_constraintEnd_toStartOf="@+id/edit_button"
+            app:layout_constraintTop_toTopOf="@+id/edit_button"
+            app:srcCompat="@drawable/check" />
+
+        <ImageButton
+            android:id="@+id/cancel_button"
+            android:layout_width="85dp"
+            android:layout_height="75dp"
+            android:background="#00000000"
+            android:scaleType="fitCenter"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="@+id/edit_button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/edit_button"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0"
+            app:srcCompat="@drawable/close" />
+
+        <TextView
+            android:id="@+id/email_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="100dp"
+            android:text="@string/Email"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.29"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/profile_pic" />
 
         <TextView
-            android:id="@+id/password"
+            android:id="@+id/first_name_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:layout_marginBottom="48dp"
-            android:text="@string/Password"
-            android:textSize="34sp"
-            app:layout_constraintBottom_toTopOf="@+id/space_id"
+            android:layout_marginTop="44dp"
+            android:text="@string/First_Name"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/profile_pic"
+            app:layout_constraintTop_toTopOf="@+id/profile_pic" />
+
+        <Button
+            android:id="@+id/profile_pic_button"
+            android:layout_width="216dp"
+            android:layout_height="42dp"
+            android:layout_marginTop="12dp"
+            android:text="Change Image"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.136"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/email" />
+            app:layout_constraintTop_toBottomOf="@+id/profile_pic" />
 
-        <TextView
-            android:id="@+id/space_id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="188dp"
-            android:text="@string/Space_ID"
-            android:textSize="34sp"
-            app:layout_constraintBottom_toTopOf="@+id/sign_out"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <TextView
-            android:id="@+id/sign_out"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="200dp"
-            android:text="@string/Sign_Out"
-            android:textSize="34sp"
+        <View
+            android:layout_width="400dp"
+            android:layout_height="1dp"
+            android:layout_marginEnd="204dp"
+            android:background="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/email_label"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <View
+            android:id="@+id/view5"
+            android:layout_width="100dp"
+            android:layout_height="1dp"
+            android:layout_marginEnd="312dp"
+            android:background="@color/black"
+            app:layout_constraintBottom_toTopOf="@+id/first_name"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="@+id/first_name"
+            app:layout_constraintTop_toBottomOf="@+id/first_name_label"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <View
+            android:id="@+id/view6"
+            android:layout_width="100dp"
+            android:layout_height="1dp"
+            android:background="@color/black"
+            app:layout_constraintBottom_toTopOf="@+id/last_name"
+            app:layout_constraintEnd_toEndOf="@+id/last_name_label"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/last_name_label"
+            app:layout_constraintTop_toBottomOf="@+id/last_name_label"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
-            android:id="@+id/last_name"
+            android:id="@+id/last_name_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="104dp"
             android:text="@string/Last_Name"
-            android:textSize="24sp"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/first_name" />
+            app:layout_constraintStart_toEndOf="@+id/first_name_label"
+            app:layout_constraintTop_toTopOf="@+id/first_name_label" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
