--- a/tidy/app/src/main/res/navigation/navigation.xml
+++ b/tidy/app/src/main/res/navigation/navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation.xml"
-    app:startDestination="@id/OverviewFragment">
+    app:startDestination="@id/addSuppliesFragment">
     <fragment
         android:id="@+id/addRooms"
         android:name="com.epfl.esl.tidy.AddRooms"
@@ -12,4 +12,8 @@
         android:id="@+id/OverviewFragment"
         android:name="com.epfl.esl.tidy.OverviewFragment"
         android:label="OverviewFragment" />
+    <fragment
+        android:id="@+id/addSuppliesFragment"
+        android:name="com.epfl.esl.tidy.AddSuppliesFragment"
+        android:label="AddSuppliesFragment" />
 </navigation>
