--- a/tidy/app/src/main/res/layout/tasks_recycle.xml
+++ b/tidy/app/src/main/res/layout/tasks_recycle.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".TasksFragment">
+    tools:context=".tasks.TasksFragment">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/tasks_view_item"
