--- a/tidy/app/src/main/res/layout/add_rooms_fragment.xml
+++ b/tidy/app/src/main/res/layout/add_rooms_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -60,13 +61,13 @@
 
 
         <FrameLayout
+            android:id="@+id/frameLayout3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="64dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
             android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@+id/frameLayout">
+            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
+            tools:layout_editor_absoluteX="20dp">
 
             <LinearLayout
                 android:id="@+id/SignInSignUpButtons"
@@ -81,7 +82,7 @@
                     style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"/>
+                    android:layout_marginBottom="16dp" />
 
                 <Button
                     android:id="@+id/AddRoomButton"
@@ -89,18 +90,38 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:text="@string/add_room"
-                    android:textSize="20sp"/>
+                    android:textSize="20sp" />
 
-<!--                <Button-->
-<!--                    android:id="@+id/SignUpButton"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:text="@string/sign_up"-->
-<!--                    android:textColor="@color/purple_200"-->
-<!--                    app:backgroundTint="@color/white" />-->
+                <!--                <Button-->
+                <!--                    android:id="@+id/SignUpButton"-->
+                <!--                    android:layout_width="match_parent"-->
+                <!--                    android:layout_height="match_parent"-->
+                <!--                    android:text="@string/sign_up"-->
+                <!--                    android:textColor="@color/purple_200"-->
+                <!--                    app:backgroundTint="@color/white" />-->
             </LinearLayout>
 
         </FrameLayout>
+
+        <ProgressBar
+            android:id="@+id/progress_circular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/recycler_view_rooms"
+            app:layout_constraintBottom_toBottomOf="@+id/recycler_view_rooms"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view_rooms"
+            android:layout_width="match_parent"
+            android:layout_height="350dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginTop="50dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/frameLayout3" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
