--- a/tidy/app/src/main/res/navigation/navigation.xml
+++ b/tidy/app/src/main/res/navigation/navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation"
-    app:startDestination="@id/profileLogin">
+    app:startDestination="@id/addRoomsFragment">
 
 
     <fragment
@@ -28,11 +28,6 @@
             android:id="@+id/action_signUp_to_profileLogin"
             app:destination="@id/profileLogin" />
     </fragment>
-
-    <fragment
-        android:id="@+id/addRooms"
-        android:name="com.epfl.esl.tidy.admin.AddRoomFragment"
-        android:label="AddRooms" />
     <fragment
         android:id="@+id/addTasks"
         android:name="com.epfl.esl.tidy.tasks.AddNewTask"
@@ -59,6 +54,10 @@
             android:id="@+id/action_settings_to_profileLogin"
             app:destination="@id/profileLogin" />
     </fragment>
+    <fragment
+        android:id="@+id/addRoomsFragment"
+        android:name="com.epfl.esl.tidy.AddRoomsFragment"
+        android:label="AddRoomsFragment" />
 
 
 </navigation>
