--- a/tidy/app/src/main/res/layout/fragment_room_view.xml
+++ b/tidy/app/src/main/res/layout/fragment_room_view.xml
@@ -14,8 +14,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:src="@drawable/broom"
-            />
+            android:src="@drawable/broom"/>
 
         <TextView
             android:id="@+id/textView"
