--- a/tidy/app/src/main/res/layout/tasks_recycle.xml
+++ b/tidy/app/src/main/res/layout/tasks_recycle.xml
@@ -1,25 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".tasks.TasksFragment">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/tasks_view_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="6dp"
-        android:padding="16dp">
+        app:cardCornerRadius='20dp'
+        android:layout_marginVertical="6dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginHorizontal="16sp"
+            android:padding="6dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:padding="6sp">
 
                 <TextView
                     android:id="@+id/task_name"
@@ -27,7 +31,8 @@
                     android:layout_height="wrap_content"
                     android:text="task_name"
                     android:textColor="@android:color/black"
-                    android:textSize="20sp" />
+                    android:textSize="24sp"
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/task_due_date"
@@ -37,7 +42,8 @@
                     android:gravity="end"
                     android:text="task_due_date"
                     android:textColor="@android:color/black"
-                    android:textSize="20sp" />
+                    android:textSize="24sp"
+                    android:textStyle="bold"/>
 
             </LinearLayout>
 
@@ -45,7 +51,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:padding="6sp">
 
                 <TextView
                     android:id="@+id/task_user"
@@ -53,7 +60,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="start"
                     android:text="user"
-                    android:textSize="15sp" />
+                    android:textSize="20sp" />
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
