--- a/tidy/app/src/main/res/values/colors.xml
+++ b/tidy/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="sky_blue">#90CAF9</color>
+    <color name="light_blue">#E3F2FD</color>
+    <color name="egg_yellow">#FFE082</color>
+    <color name="light_yellow">#FFF8E1</color>
 </resources>
