--- a/tidy/app/src/main/res/menu/bottom_menu.xml
+++ b/tidy/app/src/main/res/menu/bottom_menu.xml
@@ -5,22 +5,27 @@
     <item
         android:id="@+id/HistoryFragment"
         android:title="@string/history"
-        app:labelVisibilityMode="labeled"/>
+        app:labelVisibilityMode="labeled"
+        android:icon="@drawable/ic_baseline_history_24"/>
 
     <item
         android:id="@+id/OverviewFragment"
         android:title="@string/room_view"
-        app:labelVisibilityMode="labeled"/>
+        app:labelVisibilityMode="labeled"
+        android:icon="@drawable/ic_baseline_house_24"/>
     <item
         android:id="@+id/TasksFragment"
         android:title="@string/task_view"
-        app:labelVisibilityMode="labeled"/>
+        app:labelVisibilityMode="labeled"
+        android:icon="@drawable/ic_baseline_format_list_bulleted_24"/>
     <item
         android:id="@+id/settings"
         android:title="@string/settings"
-        app:labelVisibilityMode="labeled"/>
+        app:labelVisibilityMode="labeled"
+        android:icon="@drawable/ic_baseline_settings_24"/>
     <item
         android:id="@+id/augmentedReality"
         android:title="@string/augmented_reality"
-        app:labelVisibilityMode="labeled"/>
+        app:labelVisibilityMode="labeled"
+        android:icon="@drawable/ic_baseline_camera_24"/>
 </menu>
