--- a/tidy/app/src/main/res/layout/history_recycle.xml
+++ b/tidy/app/src/main/res/layout/history_recycle.xml
@@ -1,31 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".tasks.HistoryFragment">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/history_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="6dp"
-        android:padding="16dp">
+        app:cardCornerRadius='20dp'
+        android:layout_marginVertical="6dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginHorizontal="16sp"
+            android:padding="6dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:padding="6sp">
 
                 <TextView
                     android:id="@+id/task_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Task name"
+                    android:text="@string/task_name"
                     android:textColor="@android:color/black"
                     android:textSize="20sp" />
 
@@ -35,7 +39,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="end"
-                    android:text="Task complete date"
+                    android:text="@string/task_complete_date"
                     android:textColor="@android:color/black"
                     android:textSize="20sp" />
 
@@ -52,7 +56,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="start"
-                    android:text="Username"
+                    android:text="@string/task_user"
                     android:textSize="15sp" />
                 <TextView
                     android:id="@+id/task_due_date"
@@ -60,7 +64,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="end"
-                    android:text="Task due date"
+                    android:text="@string/task_due_date"
                     android:textColor="@android:color/black"
                     android:textSize="15sp" />
             </LinearLayout>
