--- a/tidy/app/src/main/res/layout/room_recycle.xml
+++ b/tidy/app/src/main/res/layout/room_recycle.xml
@@ -21,6 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="0px"
             android:layout_weight="3"
+            android:layout_margin="30dp"
             android:adjustViewBounds="true"
             app:srcCompat="@drawable/pick_image" />
 
